# vllm-metal

./: README.md
rust_ext/: Cargo.toml
rust_ext/src/: lib.rs
rust_ext/src/metal/: attention_ops.rs  mod.rs  tensor_bridge.rs
scripts/: ci.sh  release.sh
src/: lib.rs
tests/: test_prefix_cache.py  test_rust_integration.py  test_v1_model_runner_generate.py
vllm_metal/: platform.py
vllm_metal/attention/: backend.py
vllm_metal/mlx_backend/: batch_cache.py
vllm_metal/pytorch_backend/: tensor_bridge.py
vllm_metal/v1/: model_runner.py  worker.py
vllm_metal/v2/: penalties.py
