[package]
name = "vllm_metal_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "vllm_metal_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"

# Metal integration for Apple Silicon
objc2 = "0.5"
objc2-metal = { version = "0.2", features = [
    "MTLDevice",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLLibrary",
    "MTLBuffer",
    "MTLResource",
    "MTLTypes",
] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSError"] }
block2 = "0.5"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
glob = "0.3"

[build-dependencies]
cc = "1.0"
